--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@ryangjchandler/alpine-clipboard": "^2.3.0"
+        "@ryangjchandler/alpine-clipboard": "^2.3.0",
+        "tailwindcss-animated": "^1.1.2"
     }
 }
